TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "123619642939744" [label="Start"];
  "123619642939744" -> "123619642940608";
  "123619642940608" [label="Code"];
  "123619642940608" -> "123619642948192";
  "123619642948192" [label="Function"];
  "123619642948192" -> "123619642949056";
  "123619642948192" -> "123619642939984";
  "123619642948192" -> "123619642945024";
  "123619642949056" [label="main"];
  "123619642939984" [label="Parameters"];
  "123619642945024" [label="Code"];
  "123619642945024" -> "123619642940272";
  "123619642945024" -> "123619642948624";
  "123619642940272" [label="Code"];
  "123619642940272" -> "123619642940464";
  "123619642940464" [label="Declaration"];
  "123619642940464" -> "123619642949104";
  "123619642940464" -> "123619642940320";
  "123619642949104" [label="x"];
  "123619642940320" [label="1"];
  "123619642948624" [label="Code"];
  "123619642948624" -> "123619642940848";
  "123619642940848" [label="Declaration"];
  "123619642940848" -> "123619642949392";
  "123619642940848" -> "123619643031856";
  "123619642949392" [label="x"];
  "123619643031856" [label="2"];
}
